chore: Removendo arquivos do front

--- a/nginx-app.conf
+++ b/nginx-app.conf
@@ -4,8 +4,15 @@ server {
     root /var/www/public;
     index index.php index.html;
 
-    location / {
+
+    # Permitir apenas rotas que começam com /api
+    location /api/ {
         try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Bloquear qualquer acesso à raiz ou outras rotas
+    location / {
+        return 404;
     }
 
     location ~ \.php$ {
