--- a/api/.env.example
+++ b/api/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Top 5 Tião Carreiro API"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,12 +8,8 @@ LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+DB_DATABASE=database/database.sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
