--- a/api/.env.example
+++ b/api/.env.example
@@ -1,15 +1,18 @@
 APP_NAME="Top 5 Tião Carreiro API"
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_DEBUG=false
+APP_URL=http://localhost:8000
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=database/database.sqlite
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=top5_tiao_carreiro
+DB_USERNAME=laravel
+DB_PASSWORD=laravel123
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
