Ajuste backend para listagem de demais ficar bom

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     working_dir: /var/www
     volumes:
       - ./api:/var/www
-      - vendor:/var/www/vendor
+      - ./api/vendor:/var/www/vendor
     expose:
       - "9000"
     networks:
@@ -57,4 +57,3 @@ networks:
 
 volumes:
   dbdata:
-  vendor:
